About page update, various styling tweaks in Blog, Display, Lab

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -12,16 +12,98 @@
         </article>
         <article class="section">
             <h1 class="section-heading"><span>S</span>kills</h1>
-            <p class="section-text">This blog is a journal to keep track of my progression of skills & interests as a Web Developer. As I learn more from work and personal projects, I hope apply those skills to ideas I previously wasn't ready to execute. In gamer terms, it's like a skill tree of sorts.</p>
+            <h4 class="section-subheading">Languages</h4>
+            <div class="section-list">
+                <div class="name">Javascript / ECMA2015 / ECMA-next</div>
+                <div class="details">This is the first language I learned systematically. I'm very confident with anything Javascript and am currently transitioning to ECMA-next when learning the newest frameworks. </div>
+            </div>
+            <div class="section-list">
+                <div class="name">HTML5 / CSS3</div>
+                <div class="details">Because of my obsession with alignment, I've spent countless hours redoing layouts with different techniques. I'm confident I can produce any complex layout.</div>
+            </div>
+            <div class="section-list">
+                <div class="name">Java</div>
+                <div class="details">This was my first programming language and paved my way to OOP concepts. I learned this in college to help my friend pass his programming class. At the time I ran a Java learning blog and got as far as Reflections. Now that I'm transitioning to new ECMAscript standards, I'm looking forward to writing Object Oriented Javascript.</div>
+            </div>      
+            <div class="section-list">
+                <div class="name">PHP/Ruby</div>
+                <div class="details">I learned PHP at my first programming job, not crazy about it. I learned Ruby at a Web Development Immersive camp. I love the concise syntax of Ruby, and might have been a RoR developer if I liked Rails.</div>
+            </div>
+            <div class="section-list">
+                <div class="name">Logo</div>
+                <div class="details">Learned this in kindergarten when a guest instructor came to promote interest in programming. I made the turtle draw a flashing, rainbow-colored star with math! Fun times :D</div>
+            </div>
+            <br><br>
+            <h4 class="section-subheading">Frameworks</h4>
+            <div class="section-list">
+                <div class="name">AngularJS</div>
+                <div class="details">Despite my frustrations this is by far my best and is my go-to framework. Everything from project structure to coding habits I developed with this framework. I really hoped to like AngularJS 2.0 but it just isn't as attractive as other more nimble, less opinionated modern frameworks.</div>
+            </div> 
+            <div class="section-list">
+                <div class="name">MeteorJS</div>
+                <div class="details">This is the first framework I loved. I learned this during training camp so I really needed something both powerful and easy to learn. The isomorphic stack eliminated a lot of frustrations with inexplicable errors. Too bad there's very little demand for this skill.</div>
+            </div> 
+            <div class="section-list">
+                <div class="name">Ruby on Rails</div>
+                <div class="details">"My work done my way!" was my thinking when I was first exposed to "Convention over Configuration". I did not like Rails and all its conventions despite my liking Ruby. Since then I've gradually come around to this, especially when I started looking into Aurelia.</div>
+            </div>   
+            <br><br>
+            <h4 class="section-subheading">Responsive Design</h4>
+            <div class="section-list">
+                <div class="name">Kurisutiiina!</div>
+                <div class="details">You must pronounce this with an elongated "i" and with vibrato. As my designs got more complicated, I ditched Bootstrap and wrote my own SASS framework based on various frameworks I'd worked with in the past. My designs have gotten much simpler and minimalist as this allowed me to step away from grunt-work of polishing components and see the big picture.</div>
+            </div>    
+            <div class="section-list">
+                <div class="name">Bootstrap</div>
+                <div class="details">Oh bootstrap why must you be so opinionated? Tracking down CSS code overriden by the super-specific selectors and the "!important"s has been a nightmare. I still use this often for simpler things, and I've gotten good at being MORE opinionated than Bootstrap to do company work.</div>
+            </div>
+            <div class="section-list">
+                <div class="name">Foundation / Semantic UI / jQuery UI / Angular Material </div>
+                <div class="details">Although I don't use these anymore, they've all contributed to how I design things.</div>
+            </div>               
         </article>
         <article class="section">
             <h1 class="section-heading"><span>D</span>esign</h1>
+            <p class="section-text">My Art History teacher always told me that whatever career I pursue, I mustn't squander my passion for art. So when I started seriously learning web programming over a year ago, I made a conscious effort to put more emphasis on the front-end.</p>
             <h4 class="section-subheading">Current</h4>
             <p class="section-text">I like everything <span>minimalist</span>. I find that the simplest looking designs belie the thought behind them. For most of my work, I use Google's <span>Material Design</span> as a base and add new styles to my personal <span>SASS</span> framework.</p>
             <h4 class="section-subheading">Goal</h4>
             <p class="section-text">For me, the next step of flat design is <span>texturized</span> flat + animations. I'm very much influnced by video games, and I hope to create experiences that are as intuitive and playful as those of well-made video games.</p>
-            <h4 class="section-subheading">Misc.</h4>
-            <p class="section-text">As many of our decisions are made based on <span>emotion</span>, I hope to create designs that evoke certain emotions appropriate for the task.</p>
+            <h4 class="section-subheading">Future</h4>
+            <p class="section-text">For better or worse, many of our decisions are made based on <span>emotion</span>, I hope to create designs that can connect with the user emotionally.</p>
         </article>
+        <article class="section">
+            <h1 class="section-heading"><span>L</span>earning</h1>
+            <h4 class="section-subheading">Current</h4>
+            <div class="section-list">
+                <div class="name">Aurelia</div>
+                <div class="details">No idea the state subsidizes tech training. Supervisor tasked me with learning this on the job when I'm ahead on my work. So far it seems like AngularJS 2.0 that actually makes sense and stays out of your way. Loving it.</div>
+            </div>
+            <br><br>
+            <h4 class="section-subheading">Want to Learn</h4>
+            <div class="section-list">
+                <div class="name">ReactJS</div>
+                <div class="details">Small and flexible technologies never go out of style.</div>
+            </div> 
+        </article>
+        <article class="section">
+            <h1 class="section-heading"><span>H</span>obbies</h1>        
+            <h4 class="section-subheading">Go</h4>
+            <p class="section-text">This board game was "discovered" 5,500 years ago. I say discovered because the concept is so simple and logical, that if aliens exist in the universe, they're playing it too. From this 19 x 19 board births more possible game positions than there are atoms in the known universe.
+            <br>
+            What I love about this game is that it's a competition of wisdom. Very often you must play moves that bring equal benefit to your opponent. You can figure out somebody's personality just from playing a game with him. Because life lessons can be derived from mathematical calculations on this board, I avoid learning the game and play by pure reading-ahead. This way Go becomes not just a hobby, but also a tool to measure my personal growth.</p>
+            <h4 class="section-subheading">Anime</h4>
+            <p class="section-text">Sure Sturgeon's Law still applies, there are absolute gems in Anime. From Randian <em>Gurren Lagann</em> to Orwellian <em>Psycho-Pass</em>, classic Anime will draw you in with absolute coolness and teach you about personal responsibility and various other virtues. Not the mention the ideas are simply bonkers (Count of Monte Cristo in space!).</p>
+            <h4 class="section-subheading">Anime Music</h4>
+            <p class="section-text">Yes Anime deserves 2 sections. The Japanese have achieved great balance of Eastern sophistication and Western ingenuity in anime. Only in Anime will you hear a musical combination of Classical/Dubstep or Opera/Rap.
+            <br>
+            <a href="http://66.90.94.162/ost/death-note-original-soundtrack/fghgpcdtbm/04-l-s-theme.mp3" target="_blank"><i class="ionicons ion-link"></i> Coding Music</a>           
+            <br>
+            <a href="http://66.90.91.26/ost/tsubasa-chronicle-original-soundtrack-future-soundscape-full-/npawccopbr/03-storm-and-fire.mp3" target="_blank"><i class="ionicons ion-link"></i> Design Music</a>
+            </p>
+        </article>
+        <article class="section">
+            <h1 class="section-heading"><span>C</span>ontact</h1>        
+            <p class="section-text">I can be reached at <em>richardluo0506@gmail.com</em>, and I'm up for anything cool.</p>        
     </section>
 </div>
