commit for deploy

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -8,7 +8,7 @@
     <section class="about-content">
         <article class="section">
             <h1 class="section-heading"><span>A</span>BOUT THIS BLOG</h1>
-            <p class="section-text">This blog is a journal to keep track of my progression of skills & interests as a Web Developer. As I learn more from work and personal projects, I hope apply those skills to ideas I previously wasn't ready to execute. In gamer terms, it's like a skill tree of sorts.</p>
+            <p class="section-text">This blog is a personal journal to keep track of my progression of skills & interests as a Web Developer, as well as share my work with friends for critique. As I learn more from work and personal projects, I hope apply those skills to ideas I previously wasn't ready to execute.</p>
         </article>
         <article class="section">
             <h1 class="section-heading"><span>S</span>kills</h1>
@@ -77,7 +77,7 @@
             <h4 class="section-subheading">Current</h4>
             <div class="section-list">
                 <div class="name">Aurelia</div>
-                <div class="details">No idea the state subsidizes tech training. Supervisor tasked me with learning this on the job when I'm ahead on my work. So far it seems like AngularJS 2.0 that actually makes sense and stays out of your way. Loving it.</div>
+                <div class="details">No idea the state subsidizes tech training. Supervisor tasked me with learning this on the job when I'm ahead on my work. So far it feels very logical and intuitive. 20 hours in and it's already solving problems that were a hassle to do in Angular 1.0. Loving it.</div>
             </div>
             <br><br>
             <h4 class="section-subheading">Want to Learn</h4>
@@ -97,13 +97,16 @@
             <h4 class="section-subheading">Anime Music</h4>
             <p class="section-text">Yes Anime deserves 2 sections. The Japanese have achieved great balance of Eastern sophistication and Western ingenuity in anime. Only in Anime will you hear a musical combination of Classical/Dubstep or Opera/Rap.
             <br>
+            <br>
             <a href="http://66.90.94.162/ost/death-note-original-soundtrack/fghgpcdtbm/04-l-s-theme.mp3" target="_blank"><i class="ionicons ion-link"></i> Coding Music</a>           
             <br>
             <a href="http://66.90.91.26/ost/tsubasa-chronicle-original-soundtrack-future-soundscape-full-/npawccopbr/03-storm-and-fire.mp3" target="_blank"><i class="ionicons ion-link"></i> Design Music</a>
             </p>
+            <h4 class="section-subheading">Cooking</h4>
+            <p class="section-text">hello</p>
         </article>
         <article class="section">
             <h1 class="section-heading"><span>C</span>ontact</h1>        
-            <p class="section-text">I can be reached at <em>richardluo0506@gmail.com</em>, and I'm up for anything cool.</p>        
+            <p class="section-text">I can be reached at <em>richardluo0506@gmail.com</em>, and I'm up for any discussion, collaboration, opportunity.</p>        
     </section>
 </div>
