--- a/app/lab/lab.html
+++ b/app/lab/lab.html
@@ -1,6 +1,15 @@
 <div class="page-container lab-view" ng-cloak>
     <div class="labs-container">
         <div class="flex-xy"><div class="labs-heading"><span>P</span>et Projects</div></div>
+        <a class="lab-item" href="http://richardluo0506.github.io/betaGo" target="_blank">
+            <div class="lab-thumbnail" background-src="app/assets/img/goban.png">
+                <div class="broken">broken</div>
+            </div>
+            <div class="lab-details">
+                <div class="heading">betaGo</div>
+                <div class="description">This is a replay of Game 4 between former world champion Lee Sedol and AlphaGo. AlphaGo resigns a dozen moves after move 78 which broke AlphaGo's neural network. The background visualizes the song "the Best Move". The styling broke after a major update to my SASS framework. Rather than fixing this, I hope to use what I learned from this to build a better music visualizer, and an online joseki dictionary. Refresh stops the music.</div>
+            </div>
+        </a>
         <div class="lab-item" ui-sref="lab.goban">
             <div class="lab-thumbnail" background-src="app/assets/img/goban.png">
                 <div class="broken">broken</div>
