--- a/app/about/about.html
+++ b/app/about/about.html
@@ -95,7 +95,7 @@
             <h4 class="section-subheading">Anime</h4>
             <p class="section-text">Sure Sturgeon's Law still applies, there are absolute gems in Anime. From Randian <em>Gurren Lagann</em> to Orwellian <em>Psycho-Pass</em>, classic Anime will draw you in with absolute coolness and teach you about personal responsibility and various other virtues. Not the mention the ideas are simply bonkers (Count of Monte Cristo in space!).</p>
             <h4 class="section-subheading">Anime Music</h4>
-            <p class="section-text">Yes Anime deserves 2 sections. The Japanese have achieved great balance of Eastern sophistication and Western ingenuity in anime. Only in Anime will you hear a musical combination of Classical/Dubstep or Opera/Rap.
+            <p class="section-text">Anime soundtracks are phenomenal. The Japanese have achieved great balance of Eastern sophistication and Western ingenuity in anime. Only in anime will you hear a musical combination of Classical/Dubstep or Opera/Rap.
             <br>
             <br>
             <a href="http://66.90.94.162/ost/death-note-original-soundtrack/fghgpcdtbm/04-l-s-theme.mp3" target="_blank"><i class="ionicons ion-link"></i> Coding Music</a>           
@@ -103,10 +103,10 @@
             <a href="http://66.90.91.26/ost/tsubasa-chronicle-original-soundtrack-future-soundscape-full-/npawccopbr/03-storm-and-fire.mp3" target="_blank"><i class="ionicons ion-link"></i> Design Music</a>
             </p>
             <h4 class="section-subheading">Cooking</h4>
-            <p class="section-text">hello</p>
+            <p class="section-text">I've always liked the presentation aspects of fine-dining as well as the joy of the people eating what I make. So whenever I get the time, I spend too much on ingredients and start making something out of my skill range. Transforming food are especially interesting (<a href="https://www.youtube.com/watch?v=Uu5zGHjRaMo">Kyoto Omurice</a>). I would like to slowly save up for molecular gastronomy equipments to make more fun food.</p>
         </article>
         <article class="section">
             <h1 class="section-heading"><span>C</span>ontact</h1>        
-            <p class="section-text">I can be reached at <em>richardluo0506@gmail.com</em>, and I'm up for any discussion, collaboration, opportunity.</p>        
+            <p class="section-text">I can be reached at <em>richardluo0506@gmail.com</em>, and I'm up for any discussion, collaboration, opportunity.</p>  
     </section>
 </div>
